# acestep-cpp-ui

./: .env.example  .gitignore  API.md  App.tsx  README.md  build.bat  build.sh  codesign.sh  download-bins.bat  download-bins.sh  index.css  index.html  models.bat  models.sh  package-lock.json  package.json  setup.bat  setup.sh  start-all.bat  start-all.sh  stop-all.sh  tailwind.config.ts  tsconfig.json  types.ts
.github/workflows/: ci.yml  electron-release.yml  release.yml
backend/: CMakeLists.txt  README.md
backend/src/: main.cpp
components/: CreatePanel.tsx  DebugPanel.tsx  ModelManager.tsx  NewsPage.tsx  Sidebar.tsx  SongList.tsx
data/: news.json
docs/: electron-local-testing.md
electron/: loading.html  main.js  preload.js
electron/icons/: icon.icns
i18n/: translations.ts
server/: .env.example  package-lock.json  package.json
server/src/: index.ts
server/src/config/: index.ts
server/src/db/: migrate.ts
server/src/routes/: generate.ts  lora.ts  models.ts  referenceTrack.ts
server/src/services/: acestep.ts
server/src/services/storage/: local.ts
services/: api.ts
